<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEEED9"
    android:elevation="10dp"
    tools:context=".Payment.PaymentActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="29dp"
        android:elevation="10dp"
        android:fontFamily="@font/inter_bold"
        android:paddingStart="13dp"
        android:paddingTop="4dp"
        android:paddingEnd="13dp"
        android:paddingBottom="4dp"
        android:text="@string/payment_act_title"
        android:textSize="17sp"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/cc_pay_card"
        android:layout_width="377dp"
        android:layout_height="70dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/payment_opt_card_item"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/credit_card_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/credit_pay_opt"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/cc_radio"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="57dp"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/gopay_pay_card"
        android:layout_width="377dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/payment_opt_card_item"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cc_pay_card">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/gopay_logo" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/gopay_pay_opt"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/gopay_radio"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="95dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bca_pay_card"
        android:layout_width="377dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/payment_opt_card_item"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gopay_pay_card"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/bca_logo" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/bca_pay_opt"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bca_radio"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="110dp"
            android:layout_weight="1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/shopeepay_card"
        android:layout_width="377dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/payment_opt_card_item"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bca_pay_card"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/shopeepay_logo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/shopeepay_pay_opt"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/shopeepay_radio"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="55dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bri_card"
        android:layout_width="377dp"
        android:layout_height="70dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/payment_opt_card_item"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopeepay_card"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="right"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/bri_logo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:fontFamily="@font/inter_medium"
            android:text="@string/bri_pay_opt"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bri_radio"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="114dp"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:backgroundTint="#DF3B3B"
        android:text="Continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bri_card" />

</androidx.constraintlayout.widget.ConstraintLayout>